[package]
name = "json_parser"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A JSON parser implementation following the JSON specification"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
tempfile = "3.19.1"
# No external dependencies needed

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false